fix: avoid overflow-x on build

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
 body {
   font-family: 'Lato', serif;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
